@@ -40,6 +40,12 @@ import org.graalvm.polyglot.Context.Builder;
 import org.graalvm.polyglot.PolyglotException;
 import org.graalvm.polyglot.Value;
 
+/**
+ * A simple emulation of the {@code java} launcher that parses the command line flags and builds and
+ * Espresso context based on them. This code isn't used by anyone except Espresso developers,
+ * because in a shipped Espresso the VM is started via {@code mokapot} instead (see
+ * {@code hacking.md} for details).
+ */
 public final class EspressoLauncher extends AbstractLanguageLauncher {
     private static final String AGENT_LIB = "java.AgentLib.";
     private static final String AGENT_PATH = "java.AgentPath.";
@@ -132,7 +138,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
 
         /**
          * Advances the position, skipping over the value associated with an option if needed.
-         * 
+         *
          * @return true if there are still arguments to process, false otherwise.
          */
         boolean next() {
@@ -194,6 +200,9 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                 case "--add-reads":
                     parseNumberedOption(args, "java.AddReads", "module");
                     break;
+                case "--enable-native-access":
+                    parseNumberedOption(args, "java.EnableNativeAccess", "module");
+                    break;
                 case "-m":
                 case "--module":
                     /* This arguments specifies in which module we find the main class. */
@@ -234,6 +243,16 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                 case "-Xdebug": // only for backward compatibility
                     // ignore
                     break;
+                case "-Xcomp":
+                    espressoOptions.put("engine.CompileImmediately", "true");
+                    break;
+                case "-Xbatch":
+                    espressoOptions.put("engine.BackgroundCompilation", "false");
+                    espressoOptions.put("engine.CompileImmediately", "true");
+                    break;
+                case "-Xint":
+                    espressoOptions.put("engine.Compilation", "false");
+                    break;
 
                 case "-XX:+PauseOnExit":
                     pauseOnExit = true;
@@ -242,6 +261,10 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                 case "--engine.RelaxStaticObjectSafetyChecks":
                     isRelaxStaticObjectSafetyChecksSet = true;
                     unrecognized.add(args.getArg());
+                    break;
+
+                case "--enable-preview":
+                    espressoOptions.put("java.EnablePreview", "true");
                     break;
 
                 default:
@@ -274,6 +297,8 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                         espressoOptions.put(AGENT_PATH + split[0], split[1]);
                     } else if (arg.startsWith("-Xmn") || arg.startsWith("-Xms") || arg.startsWith("-Xmx") || arg.startsWith("-Xss")) {
                         unrecognized.add("--vm." + arg.substring(1));
+                    } else if (arg.startsWith("-XX:")) {
+                        handleXXArg(arg, unrecognized);
                     } else
                     // -Dsystem.property=value
                     if (arg.startsWith("-D")) {
@@ -355,6 +380,36 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
         return unrecognized;
     }
 
+    private void handleXXArg(String fullArg, ArrayList<String> unrecognized) {
+        String arg = fullArg.substring("-XX:".length());
+        String name;
+        String value;
+        if (arg.length() >= 1 && (arg.charAt(0) == '+' || arg.charAt(0) == '-')) {
+            value = Boolean.toString(arg.charAt(0) == '+');
+            name = arg.substring(1);
+        } else {
+            int idx = arg.indexOf('=');
+            if (idx < 0) {
+                unrecognized.add(fullArg);
+                return;
+            }
+            name = arg.substring(0, idx);
+            value = arg.substring(idx + 1);
+        }
+        switch (name) {
+            case "UnlockDiagnosticVMOptions", "UnlockExperimentalVMOptions" -> unrecognized.add("--experimental-options=" + value);
+            case "WhiteBoxAPI" -> espressoOptions.put("java." + name, value);
+            case "TieredStopAtLevel" -> {
+                if ("0".equals(value)) {
+                    espressoOptions.put("engine.Compilation", "false");
+                } else {
+                    unrecognized.add(fullArg);
+                }
+            }
+            default -> unrecognized.add(fullArg);
+        }
+    }
+
     private void buildJvmArgs(List<String> arguments, int toBuild) {
         /*
          * Note:
@@ -363,7 +418,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
          * world. It is actually expected that the vm arguments list is populated with arguments
          * which have been pre-formatted by the regular Java launcher when passed to the VM, ie: the
          * arguments if the VM was created through a call to JNI_CreateJavaVM.
-         * 
+         *
          * In particular, it expects all kay-value pairs to be equals-separated and not
          * space-separated. Furthermore, it does not expect syntactic-sugared some arguments such as
          * '-m' or '--modules', that would have been replaced by the regular java launcher as
@@ -573,7 +628,7 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
         String javaVersion = system.invokeMember("getProperty", "java.version").asString();
         String javaVersionDate = system.invokeMember("getProperty", "java.version.date").asString();
         String debugLevel = system.invokeMember("getProperty", "jdk.debug", "release").asString();
-        String vendorVersion = system.invokeMember("getProperty", "java.vendor.version").asString();
+        String vendorVersion = system.invokeMember("getProperty", "java.vendor.version", "").asString();
         String javaRuntimeName = system.invokeMember("getProperty", "java.runtime.name").asString();
         String javaRuntimeVersion = system.invokeMember("getProperty", "java.runtime.version").asString();
         boolean isLTS = javaRuntimeVersion.contains("LTS");
